--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/CloneModal.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/CloneModal.razor
@@ -108,7 +108,7 @@
                                 </MChip>
                             }
                         </MChipGroup>
-                        <p style="font-size:14px; font-weight:700; color:#1B2559">@T("Config object")</p>
+                        <p style="font-size:14px; font-weight:700; color:#1B2559">@T("Select config object")</p>
                         <MCheckbox Value="CloneConfigObjectAllChecked"
                                    ValueChanged="CloneConfigObjectAllCheckedChanged"
                                    HideDetails="true"
@@ -158,8 +158,8 @@
                                         <MExpansionPanelContent Style="padding-left: 8px;">
                                             <div style="border-radius: 8px; border: 1px solid #E2E7F4; padding:12px 24px;">
                                                 <MRow Style="color: #A3AED0; font-size: 14px;" NoGutters>
-                                                    <span style="width: 47.5%">Name</span>
-                                                    <span style="width: 47.5%">Code</span>
+                                                    <span style="width: 47.5%">Key</span>
+                                                    <span style="width: 47.5%">Value</span>
                                                     <span class="d-flex justify-center" style="width: 5%">@T("Operation")</span>
                                                 </MRow>
                                                 <MDivider Class="mt-3 mx-n6"></MDivider>
