--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/App.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/App.razor
@@ -15,7 +15,7 @@
                     @T("AppCount")：<span class="subtitle2">@_apps.Count</span>
                 </MRow>
                 <div style="height: calc(100vh - 320px); overflow-y: auto; overflow-x: hidden;">
-                    <MRow NoGutters Class="mt-4 body2">
+                    <MRow NoGutters Class="mt-4 body2" Style="word-break: break-all;">
                         @_projectDetail.Description
                     </MRow>
                     <MRow NoGutters Class="regular3--text body2 mt-6">@T("Participate team")</MRow>
@@ -96,7 +96,7 @@
             </div>
             <div class="mt-6" style="width:100%; height: calc(100vh - 497px);overflow-y:auto; overflow-x:hidden;">
                 <MRow>
-                    @foreach (var app in _apps.OrderByDescending(app => app.IsPinned).ThenByDescending(app => app.ModificationTime))
+                    @foreach (var app in _apps)
                     {
                         <MCol Lg="4" Md="6" Sm="12">
                             <AppCard OnClick="()=>NavigateToConfigAsync(new ConfigComponentModel(app.Id, app.EnvironmentClusters[0].Id, ConfigObjectType.App, app.ProjectId))" Style="border: none;" OnPinClick="()=>AppDetailPinAsync(app)" IsPin="app.IsPinned" App="app" EnvironmentClusters="app.EnvironmentClusters">
