--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/css/masa-dcc.css
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/css/masa-dcc.css
@@ -687,9 +687,13 @@ input::-webkit-input-placeholder {
 }
 
 .text-overflow {
-    white-space: nowrap;
-    text-overflow: ellipsis;
+    -webkit-line-clamp: 1;
+    word-break: break-all;
     overflow: hidden;
+    white-space: pre-wrap;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
 }
 
 .text-overflow2 {
@@ -772,4 +776,14 @@ input::-webkit-input-placeholder {
 
 textarea:disabled {
     color: rgba(0,0,0,.5);
+}
+
+.masa-stack-components .m-input.m-textarea.rounded-r-0 fieldset {
+    border-bottom-right-radius: 0 !important;
+    border-top-right-radius: 0 !important;
+}
+
+.masa-stack-components .m-input.m-textarea.rounded-l-0 fieldset {
+    border-bottom-left-radius: 0 !important;
+    border-top-left-radius: 0 !important;
 }
