--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/CloneModal.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/CloneModal.razor
@@ -33,7 +33,7 @@
                                     <span style="font-size: 20px; font-weight: bold; color: #323D6F;">
                                         "@ProjectDetail.Name"-"@AppDetail.Name"-"<span style="@($"color: {SelectCluster.EnvironmentColor} !important")">@SelectCluster.EnvironmentName</span>"-"@SelectCluster.ClusterName"
                                     </span>
-                                    &nbsp; @T("`Configuration")"@_selectConfigObject.Name"@T("To")
+                                    &nbsp; @T("`Config object")"@_selectConfigObject.Name"@T("To")
                                 </div>
                             }
                         </div>
