--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
@@ -9,7 +9,7 @@
                     <div class="full-width d-flex">
                         <div class="emphasis--text h6 text-overflow2">@_appDetail.Name</div>
                         <MSpacer></MSpacer>
-                        @if (ConfigObjectType!=ConfigObjectType.Public)
+                        @if (ConfigObjectType != ConfigObjectType.Public)
                         {
                             <MMenu OffsetY>
                                 <ActivatorContent>
@@ -125,14 +125,14 @@
                                             @{
                                                 string content = configObject.Content.Replace("\n", "").Replace(" ", "").Replace("\t", "").Replace("\r", "");
                                                 string tempContent = configObject.TempContent.Replace("\n", "").Replace(" ", "").Replace("\t", "").Replace("\r", "");
-                                                if (configObject.RelationConfigObjectId == 0 && !configObject.IsPublished && content != tempContent)
+                                                if (configObject.RelationConfigObjectId == 0 && !configObject.IsPublished && content != tempContent && !configObject.IsEditing)
                                                 {
                                                     <div class="mr-2" style="height: 26px; padding:0 6px; background: #FF7D00; text-align: center; font-size: 12px;color: white; border-radius: 16px; font-weight: normal; line-height: 26px;">
                                                         @T("Modified")
                                                     </div>
                                                 }
                                             }
-                                            @if(configObject.Encryption)
+                                            @if (configObject.Encryption)
                                             {
                                                 <SIcon Style="pointer-events: auto !important;" Color="#323D6F" Tooltip="@T("Encrypted config object")" Size="20" Class="mr-1">mdi-lock</SIcon>
                                             }
@@ -151,8 +151,14 @@
                                             <div class="regular3--text btn d-flex">
                                                 <span>|</span>
                                                 <sapn class="ml-2">@configObject.FormatName</sapn>
-                                            </div>                                            
+                                            </div>
                                             <MSpacer></MSpacer>
+                                            @if (configObject.IsEditing)
+                                            {
+                                                <MButton Class="mr-4" StopPropagation Icon OnClick="()=>CancelEditConfigContent(configObject)">
+                                                    <SIcon Tooltip="@T("Cancel")" Color="#323D6F">mdi-close-thick</SIcon>
+                                                </MButton>
+                                            }
                                             <MButton StopPropagation Icon Class="mr-4" OnClick="()=> UpdateJsonConfigAsync(configObject)">
                                                 @if (!configObject.IsEditing)
                                                 {
@@ -253,13 +259,13 @@
                                             {
                                                 <SIcon Tooltip="@(T("Connected"))" Color="primary" Class="mr-2">mdi-link-variant</SIcon>
                                             }
-                                            @if (configObject.RelationConfigObjectId == 0 && !configObject.IsPublished && !configObject.IsEditing)
+                                            @if (configObject.RelationConfigObjectId == 0 && !configObject.IsPublished && !configObject.ElevationTabPropertyContent.Disabled)
                                             {
                                                 <div class="mr-2" style="height: 26px; padding:0 6px; background: #FF7D00; text-align: center; font-size: 12px;color: white; border-radius: 16px; font-weight: normal; line-height: 26px;">
                                                     @T("Modified")
                                                 </div>
                                             }
-                                            @if(configObject.Encryption)
+                                            @if (configObject.Encryption)
                                             {
                                                 <SIcon Style="pointer-events: auto !important;" Color="#323D6F" Tooltip="@T("Encrypted config object")" Size="20" Class="mr-1">mdi-lock</SIcon>
                                             }
@@ -278,7 +284,7 @@
                                             <div class="regular3--text btn d-flex">
                                                 <span>|</span>
                                                 <sapn class="ml-2">@configObject.FormatName</sapn>
-                                            </div>                                            
+                                            </div>
                                             <MSpacer></MSpacer>
                                             @if (!configObject.FromRelation)
                                             {
@@ -455,6 +461,12 @@
                                             </SElevationTabItem>
                                             <SElevationTabItem>
                                                 <div class="d-flex justify-end">
+                                                    @if (configObject.ElevationTabPropertyContent.Disabled)
+                                                    {
+                                                        <MButton Class="mr-4" StopPropagation Icon OnClick="()=>CancelEditConfigContent(configObject)">
+                                                            <SIcon Tooltip="@T("Cancel")" Color="#323D6F">mdi-close-thick</SIcon>
+                                                        </MButton>
+                                                    }
                                                     <MButton StopPropagation Icon Class="mr-4 mb-2">
                                                         @if (!configObject.ElevationTabPropertyContent.Disabled)
                                                         {
@@ -494,7 +506,7 @@
                                                     </div>
                                                 }
                                             }
-                                            @if(configObject.Encryption)
+                                            @if (configObject.Encryption)
                                             {
                                                 <SIcon Style="pointer-events: auto !important;" Color="#323D6F" Tooltip="@T("Encrypted config object")" Size="20" Class="mr-1">mdi-lock</SIcon>
                                             }
@@ -513,8 +525,14 @@
                                             <div class="regular3--text btn d-flex">
                                                 <span>|</span>
                                                 <sapn class="ml-2">@configObject.FormatName</sapn>
-                                            </div>                                            
+                                            </div>
                                             <MSpacer></MSpacer>
+                                            @if (configObject.IsEditing)
+                                            {
+                                                <MButton Class="mr-4" StopPropagation Icon OnClick="()=>CancelEditConfigContent(configObject)">
+                                                    <SIcon Tooltip="@T("Cancel")" Color="#323D6F">mdi-close-thick</SIcon>
+                                                </MButton>
+                                            }
                                             <MButton StopPropagation Icon Class="mr-4" OnClick="()=> UpdateOtherConfigObjectContentAsync(configObject)">
                                                 @if (!configObject.IsEditing)
                                                 {
@@ -632,7 +650,7 @@
                 <MTextarea Class="mt-6" Label="@T("Description")" Dense Outlined @bind-Value="_propertyConfigModal.Data.Description"></MTextarea>
             </div>
             <div class="d-flex justify-end align-end" style="width:100%; height:100%;">
-                <MButton Height="40" Class="rounded-pill" Color="primary" Width="100" OnClick="()=>SubmitPropertyConfigAsync(formContext)">@(_propertyConfigModal.HasValue ? T("Save") : T("Submit"))</MButton>
+                <SButton Color="primary" Width="100" OnClick="()=>SubmitPropertyConfigAsync(formContext)">@(_propertyConfigModal.HasValue ? T("Save") : T("Submit"))</SButton>
                 </div>
             </div>
         </MForm>
@@ -653,49 +671,49 @@
                OnClick="RollbackAsync"
                OnClickAfter="_handleRollbackOnClickAfter" />
 
-<SSheetDialog @key="@($"releaseHistoryModal-{_showReleaseHistory}")" @bind-Value="_showReleaseHistory" Title="@T("Release history")" Icon="mdi-circle" IconColor="success">
-    <div class="d-flex flex-column" style="width:100%; height:100%; padding: 48px 228px">
-        <div>
-            <div class="emphasis--text h6 d-flex align-center">
-                @_selectConfigObject.Name
-                <span class="ml-3 regular3--text btn">|</span>
-                <sapn class="ml-2 regular3--text btn">@_releaseHistory.FormatLabelCode</sapn>
+    <SSheetDialog @key="@($"releaseHistoryModal-{_showReleaseHistory}")" @bind-Value="_showReleaseHistory" Title="@T("Release history")" Icon="mdi-circle" IconColor="success">
+        <div class="d-flex flex-column" style="width:100%; height:100%; padding: 48px 228px">
+            <div>
+                <div class="emphasis--text h6 d-flex align-center">
+                    @_selectConfigObject.Name
+                    <span class="ml-3 regular3--text btn">|</span>
+                    <sapn class="ml-2 regular3--text btn">@_releaseHistory.FormatLabelCode</sapn>
+                </div>
             </div>
-        </div>
-        <div class="d-flex full-height full-width mt-12" style="overflow: hidden;">
-            <div class="full-height" style="min-width: 290px; width: 290px; margin-left: -85px; border-right: 1px solid #E2E7F4; overflow-x: hidden; overflow-y: auto;">
-                <MTimeline>
-                    @{
+            <div class="d-flex full-height full-width mt-12" style="overflow: hidden;">
+                <div class="full-height" style="min-width: 290px; width: 290px; margin-left: -85px; border-right: 1px solid #E2E7F4; overflow-x: hidden; overflow-y: auto;">
+                    <MTimeline>
+                        @{
                         int _index = 0;
                         foreach (var release in _configObjectReleases)
                         {
                             int index = _index;
                             _index++;
-                                <MTimelineItem Class="d-flex align-start" HideDot="!release.IsActive" Small FillDot Right @onclick="()=>OnTimelineItemClickAsync(release)">
-                                    <IconContent>
-                                        <MIcon Size="20" Color="primary">mdi-circle</MIcon>
-                                    </IconContent>
-                                    <OppositeContent>
-                                        <div>
-                                            <div style="@(release.IsActive ? "font-size:14px; font-weight: 600; color: #1B2559;" : "font-size:12px; font-weight: 500; color: #485585;")">
-                                                @release.CreationTime.ToString("MM-dd").TrimStart('0')
-                                            </div>
-                                            @if (index == 0)
-                                            {
-                                                <div style="font-size:10px; font-weight: 400; color: #A3AED0;">@T("Current")</div>
-                                            }
-                                            else if (release.IsInvalid)
-                                            {
-                                                <div style="font-size:10px; font-weight: 400; color: #A3AED0;">@T("Rollbacked")</div>
-                                            }
+                            <MTimelineItem Class="d-flex align-start" HideDot="!release.IsActive" Small FillDot Right @onclick="()=>OnTimelineItemClickAsync(release)">
+                                <IconContent>
+                                    <MIcon Size="20" Color="primary">mdi-circle</MIcon>
+                                </IconContent>
+                                <OppositeContent>
+                                    <div>
+                                        <div style="@(release.IsActive ? "font-size:14px; font-weight: 600; color: #1B2559;" : "font-size:12px; font-weight: 500; color: #485585;")">
+                                            @release.CreationTime.ToString("MM-dd").TrimStart('0')
                                         </div>
-                                    </OppositeContent>
-                                    <ChildContent>
-                                        <div class="text-overflow2" style="@(release.IsActive ? "font-size:14px; font-weight: 600; color: #1B2559; width: 80px;" : "font-size:12px; font-weight: 500; color: #485585; width: 80px;")">
-                                            @release.Name
-                                        </div>
-                                    </ChildContent>
-                                </MTimelineItem>
+                                        @if (index == 0)
+                                        {
+                                            <div style="font-size:10px; font-weight: 400; color: #A3AED0;">@T("Current")</div>
+                                        }
+                                        else if (release.IsInvalid)
+                                        {
+                                            <div style="font-size:10px; font-weight: 400; color: #A3AED0;">@T("Rollbacked")</div>
+                                        }
+                                    </div>
+                                </OppositeContent>
+                                <ChildContent>
+                                    <div class="text-overflow2" style="@(release.IsActive ? "font-size:14px; font-weight: 600; color: #1B2559; width: 80px;" : "font-size:12px; font-weight: 500; color: #485585; width: 80px;")">
+                                        @release.Name
+                                    </div>
+                                </ChildContent>
+                            </MTimelineItem>
                         }
                     }
                 </MTimeline>
@@ -810,4 +828,3 @@
 </CloneModal>
 
 <RelationModal @ref="_relation" AppDetail="_appDetail" OnSubmitAfter="()=>GetConfigObjectsAsync(EnvironmentClusterId,ConfigObjectType)" />
-
