--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Label.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Label.razor
@@ -66,13 +66,13 @@
                         <span class="d-flex justify-center" style="width: 5%">@T("Operation")</span>
                     </MRow>
                     <MDivider Class="mt-3"></MDivider>
-                    @foreach (var item in _labelValues)
+                    @foreach (var item in _labelModal.Data.LabelValues)
                     {
                         <MRow Class="pt-4 px-6" NoGutters Justify="JustifyTypes.SpaceBetween">
-                            <STextField Class="pr-6" Outlined @bind-Value="item.Name" Label="Name"></STextField>
-                            <STextField Disabled="@(_labelModal.HasValue && item.Disabled)" Outlined @bind-Value="item.Code" Label="Code"></STextField>
+                            <STextField Style="width: 46.5%" Class="pr-6" Outlined @bind-Value="item.Name" Label="Name"></STextField>
+                            <STextField Style="width: 46.5%" Disabled="@(_labelModal.HasValue && item.Disabled)" Outlined @bind-Value="item.Code" Label="Code"></STextField>
                             <div class="d-flex justify-end align-start ml-6" style="width: 5%; margin-top: 14px;">
-                                <MIcon Disabled="@(_labelValues.Count==1)" OnClick="()=>RemoveLabelValue(item.Index)" Class="hover-pointer mr-3">mdi-close</MIcon>
+                                <MIcon Disabled="@(_labelModal.Data.LabelValues.Count==1)" OnClick="()=>RemoveLabelValue(item.Index)" Class="hover-pointer mr-3">mdi-close</MIcon>
                                 <MIcon OnClick="()=>AddLabelValue(item.Index)" Class="hover-pointer">mdi-plus</MIcon>
                             </div>
                         </MRow>
