--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Overview.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Overview.razor
@@ -93,7 +93,7 @@
             </div>
         </MTabItem>
         <MTabItem>
-            <Masa.Dcc.Web.Admin.Rcl.Pages.App ProjectId="_appModel.ProjectId"
+            <Masa.Dcc.Web.Admin.Rcl.Pages.App ProjectId="_selectProjectId"
                                               @ref="_app">
             </Masa.Dcc.Web.Admin.Rcl.Pages.App>
         </MTabItem>
