--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/css/masa-dcc.css
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/wwwroot/css/masa-dcc.css
@@ -775,3 +775,8 @@ textarea:disabled {
     border-bottom-left-radius: 0 !important;
     border-top-left-radius: 0 !important;
 }
+
+.overflow-hidden .m-navigation-drawer__content {
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
