--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/_Imports.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/_Imports.razor
@@ -11,3 +11,5 @@
 @using Masa.Stack.Components
 @using Masa.Dcc.Web.Admin.Rcl.Pages.Modal;
 @using Humanizer
+@using Masa.Contrib.Service.Caller.Authentication.OpenIdConnect;
+@using System.Reflection;
