--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Shared/MainLayout.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Shared/MainLayout.razor
@@ -1,8 +1,19 @@
 ﻿@inherits LayoutComponentBase
 
-<SLayout AppId="masa-dcc-web-admin"
+<SLayout OnErrorAsync="OnError"
+         AppId="masa-dcc-web-admin"
          TeamRouteFormat="team"
          Logo="https://cdn.masastack.com/stack/images/logo/MASAStack/logo-h-en.png"
          MiniLogo="https://cdn.masastack.com/stack/images/logo/MASAStack/logo.png">
     @Body
 </SLayout>
+
+@code {
+    [Inject]
+    public IPopupService PopupService { get; set; } = default!;
+
+    async Task OnError(Exception exception)
+    {
+        await PopupService.AlertAsync(exception.Message, AlertTypes.Error);
+    }
+}
