chore: update appsettings

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Team.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Team.razor
@@ -42,7 +42,7 @@
                         <div class="mt-6" style="height: calc(100vh - 256px); overflow: hidden; position: relative;">
                             <ProjectList @ref="_projectListComponent"
                                          FetchProjectCount="ProjectCountHandler"
-                                         TeamId="_userTeam.Id"
+                                         TeamId="_teamId"
                                          OnNameClick="NavigateToAppAsync"
                                          OnAppCardClick="NavigateToConfigAsync"
                                          OnAppPinClick="AppPinAsync" />
