--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Team.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Team.razor
@@ -72,7 +72,7 @@
                                 <MAvatar Class="mr-3">
                                     <MImage Height="48" Width="48" Src="@item.Avatar"></MImage>
                                 </MAvatar>
-                                @item.Name
+                                @item.DisplayName
                             </MRow>
                         }
                         <MRow NoGutters Class="regular3--text btn mt-6">@T("Members")</MRow>
@@ -82,7 +82,7 @@
                                 <MAvatar MinHeight="40" MinWidth="40" Height="40" Width="40" Class="mr-3">
                                     <MImage Height="40" Width="40" Src="@item.Avatar"></MImage>
                                 </MAvatar>
-                                @item.Name
+                                @item.DisplayName
                             </MRow>
                         }
                     </div>
